--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/onest": "^5.0.3",
     "astro": "^4.6.3",
     "tailwindcss": "^3.4.3"
   }
